samples/_failures_safe/1761294954_bb92f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6cd7433e.c: In function ‘main’:
./samples/SAFE/__tmp_6cd7433e.c:147:5: error: expected declaration or statement at end of input
  147 |     if (a.rows == a.cols) {
      |     ^~
./samples/SAFE/__tmp_6cd7433e.c:147:5: error: expected declaration or statement at end of input
